--- a/g.html
+++ b/g.html
@@ -16,7 +16,7 @@
       position: relative;
     }
 
-    /* Falling shapes */
+   
     .shape {
       position: fixed;
       top: -100px;
@@ -49,7 +49,7 @@
       max-width: 1000px;
       margin: 0 auto;
       position: relative;
-      z-index: 10; /* Ensure squares are above shapes */
+      z-index: 10; 
     }
 
     .game-square {
@@ -105,7 +105,7 @@
 </div>
 
 <script>
-  // Falling shapes
+  
   function spawnShape() {
     const shape = document.createElement('div');
     shape.className = 'shape';
