--- a/g.html
+++ b/g.html
@@ -16,7 +16,7 @@
       position: relative;
     }
 
-   
+    
     .shape {
       position: fixed;
       top: -100px;
@@ -30,9 +30,7 @@
     }
 
     @keyframes fall {
-      to {
-        transform: translateY(120vh) rotate(360deg);
-      }
+      to { transform: translateY(120vh) rotate(360deg); }
     }
 
     h1 {
@@ -49,7 +47,7 @@
       max-width: 1000px;
       margin: 0 auto;
       position: relative;
-      z-index: 10; 
+      z-index: 10;
     }
 
     .game-square {
@@ -81,6 +79,35 @@
       font-size: 0.9rem;
       color: #fff;
     }
+
+    
+    .bottom-bar {
+      position: fixed;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: rgba(255,255,255,0.07);
+      padding: 12px 25px;
+      border-radius: 20px;
+      display: flex;
+      gap: 25px;
+      backdrop-filter: blur(10px);
+      z-index: 20;
+    }
+
+    .bottom-bar img {
+      width: 35px;
+      height: 35px;
+      filter: invert(1);
+      opacity: 0.9;
+      cursor: pointer;
+      transition: 0.25s;
+    }
+
+    .bottom-bar img:hover {
+      transform: scale(1.15);
+      opacity: 1;
+    }
   </style>
 </head>
 <body>
@@ -104,8 +131,13 @@
   </a>
 </div>
 
+
+<div class="bottom-bar">
+  <a href="g.html"><img src="https://www.svgrepo.com/show/326649/game-controller-outline.svg" alt="Games"></a>
+  <a href="#"><img src="https://static.thenounproject.com/png/2162450-200.png" alt="Other"></a>
+</div>
+
 <script>
-  
   function spawnShape() {
     const shape = document.createElement('div');
     shape.className = 'shape';
