--- a/g.html
+++ b/g.html
@@ -133,8 +133,18 @@
 
 
 <div class="bottom-bar">
-  <a href="g.html"><img src="https://www.svgrepo.com/show/326649/game-controller-outline.svg" alt="Games"></a>
-  <a href="#"><img src="https://static.thenounproject.com/png/2162450-200.png" alt="Other"></a>
+  <a href="g.html">
+    <img src="https://www.svgrepo.com/show/326649/game-controller-outline.svg" />
+  </a>
+  <a href="apps.html">
+    <img src="https://t3.ftcdn.net/jpg/15/88/15/36/360_F_1588153698_7iJuiX3nGooQmQf7piMer4Y7oUYJWrU4.webp" />
+</a>
+<a href="ideas.html">
+  <img src="https://static.thenounproject.com/png/2162450-200.png" />
+</a>
+  <a href="index.html>
+    <img src="https://images.rawpixel.com/image_png_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDI0LTExL3YxMTgxLXR1LWVsZW1lbnQtMjUwLXAtbTN3cXR3dTEucG5n.png">
+  </a>
 </div>
 
 <script>
