Update game titles in g.html

--- a/g.html
+++ b/g.html
@@ -112,17 +112,17 @@
 </head>
 <body>
 
-<h1>My Game Collection</h1>
+<h1>G@mes</h1>
 
 <div class="game-container">
   <a href="iframe.html?game=game1" class="game-square">
     <img src="games/game1-icon.png" alt="Game 1">
-    <div class="game-title">Game 1</div>
+    <div class="game-title">People Playground</div>
   </a>
 
   <a href="iframe.html?game=game2" class="game-square">
     <img src="games/game2-icon.png" alt="Game 2">
-    <div class="game-title">Game 2</div>
+    <div class="game-title">Buckshot Roulette</div>
   </a>
 
   <a href="iframe.html?game=game3" class="game-square">
