--- a/g.html
+++ b/g.html
@@ -142,8 +142,8 @@
 <a href="ideas.html">
   <img src="https://static.thenounproject.com/png/2162450-200.png" />
 </a>
-  <a href="index.html>
-    <img src="https://images.rawpixel.com/image_png_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDI0LTExL3YxMTgxLXR1LWVsZW1lbnQtMjUwLXAtbTN3cXR3dTEucG5n.png">
+  <a href="index.html">
+    <img src="https://images.rawpixel.com/image_png_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDI0LTExL3YxMTgxLXR1LWVsZW1lbnQtMjUwLXAtbTN3cXR3dTEucG5n.png" />
   </a>
 </div>
 
