--- a/index.html
+++ b/index.html
@@ -52,12 +52,13 @@
   <img src="https://static.thenounproject.com/png/2162450-200.png" />
 </a>
   <a href="index.html">
-    <img src="https://images.rawpixel.com/image_png_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDI0LTExL3YxMTgxLXR1LWVsZW1lbnQtMjUwLXAtbTN3cXR3dTEucG5n.png" />
+    <img src="home.svg" />
   </a>
 </div>
 
 
 </body>
 </html>
+
 
 
