Update iframe source links and bottom bar items

--- a/iframe.html
+++ b/iframe.html
@@ -75,8 +75,18 @@
 
 
 <div class="bottom-bar">
-  <a href="g.html"><img src="https://www.svgrepo.com/show/326649/game-controller-outline.svg" alt="Games"></a>
-  <a href="#"><img src="https://static.thenounproject.com/png/2162450-200.png" alt="Other"></a>
+  <a href="g.html">
+    <img src="https://www.svgrepo.com/show/326649/game-controller-outline.svg" />
+  </a>
+  <a href="apps.html">
+    <img src="https://t3.ftcdn.net/jpg/15/88/15/36/360_F_1588153698_7iJuiX3nGooQmQf7piMer4Y7oUYJWrU4.webp" />
+</a>
+<a href="ideas.html">
+  <img src="https://static.thenounproject.com/png/2162450-200.png" />
+</a>
+  <a href="index.html">
+    <img src="home.svg" />
+  </a>
 </div>
 
 <script>
@@ -99,9 +109,9 @@
   const game = params.get('game');
 
   const gameMap = {
-    game1: "games/game1.html",
-    game2: "games/game2.html",
-    game3: "games/game3.html"
+    game1: "games/people-playground/index.html",
+    game2: "games/buckshot-roulette/index.html",
+    game3: "games/undertale/index.html"
   };
 
   if (game && gameMap[game]) {
@@ -113,3 +123,4 @@
 
 </body>
 </html>
+
