Rename 'Game 3' to 'Undertale' in g.html

--- a/g.html
+++ b/g.html
@@ -127,7 +127,7 @@
 
   <a href="iframe.html?game=game3" class="game-square">
     <img src="games/game3-icon.png" alt="Game 3">
-    <div class="game-title">Game 3</div>
+    <div class="game-title">Undertale</div>
   </a>
 </div>
 
