--- a/iframe.html
+++ b/iframe.html
@@ -14,7 +14,7 @@
       position: relative;
     }
 
-    
+ 
     .shape {
       position: fixed;
       top: -100px;
@@ -31,15 +31,19 @@
       to { transform: translateY(120vh) rotate(360deg); }
     }
 
+
     iframe {
-      width: 100%;
-      height: 100vh;
-      border: none;
-      z-index: 10;
       position: relative;
+      width: 90%;
+      height: 90vh;
+      margin: 5vh auto;
+      display: block;
+      border: 3px solid rgba(255,255,255,0.3);
+      border-radius: 10px;
+      z-index: 10;
     }
 
-    
+    /* Bottom bar */
     .bottom-bar {
       position: fixed;
       bottom: 20px;
@@ -73,18 +77,19 @@
 
 <iframe id="gameFrame" src=""></iframe>
 
+
 <div class="bottom-bar">
   <a href="g.html">
-    <img src="https://www.svgrepo.com/show/326649/game-controller-outline.svg" />
+    <img src="https://www.svgrepo.com/show/326649/game-controller-outline.svg" alt="Games" />
   </a>
   <a href="apps.html">
-    <img src="https://t3.ftcdn.net/jpg/15/88/15/36/360_F_1588153698_7iJuiX3nGooQmQf7piMer4Y7oUYJWrU4.webp" />
+    <img src="https://t3.ftcdn.net/jpg/15/88/15/36/360_F_1588153698_7iJuiX3nGooQmQf7piMer4Y7oUYJWrU4.webp" alt="Apps" />
   </a>
   <a href="ideas.html">
-    <img src="https://static.thenounproject.com/png/2162450-200.png" />
+    <img src="https://static.thenounproject.com/png/2162450-200.png" alt="Ideas" />
   </a>
   <a href="index.html">
-    <img src="home.svg" />
+    <img src="home.svg" alt="Home" />
   </a>
 </div>
 
@@ -103,22 +108,23 @@
   }
   setInterval(spawnShape, 200);
 
- 
+  
   const params = new URLSearchParams(window.location.search);
   const game = params.get('game');
 
   const gameMap = {
-    game1: "games/buckshot-roulette/index.html",
-    game2: "games/people-playground/index.html",
+    game1: "games/people-playground/index.html",
+    game2: "games/buckshot-roulette/index.html",
     game3: "games/undertale/index.html"
   };
 
   const iframe = document.getElementById("gameFrame");
 
   if (game && gameMap[game]) {
+    console.log("Loading game:", gameMap[game]);
     iframe.src = gameMap[game];
   } else {
-    document.body.innerHTML = "<h1 style='color:white;text-align:center;'>Game not found</h1>";
+    document.body.innerHTML = "<h1 style='color:white;text-align:center;margin-top:40vh;'>Game not found</h1>";
   }
 </script>
 
