--- a/g.html
+++ b/g.html
@@ -116,17 +116,17 @@
 
 <div class="game-container">
   <a href="iframe.html?game=game1" class="game-square">
-    <img src="games/game1-icon.png" alt="Game 1">
+    <img src="games/people-playground.png" alt="Game 1">
     <div class="game-title">People Playground</div>
   </a>
 
   <a href="iframe.html?game=game2" class="game-square">
-    <img src="games/game2-icon.png" alt="Game 2">
+    <img src="games/buckshot-roulette.png" alt="Game 2">
     <div class="game-title">Buckshot Roulette</div>
   </a>
 
   <a href="iframe.html?game=game3" class="game-square">
-    <img src="games/game3-icon.png" alt="Game 3">
+    <img src="games/undertale.png" alt="Game 3">
     <div class="game-title">Undertale</div>
   </a>
 </div>
