Add settings link to g.html

--- a/g.html
+++ b/g.html
@@ -148,6 +148,9 @@
   <a href="index.html">
     <img src="home.svg" />
   </a>
+  <a href="settings.html">
+    <img src="setting.svg" />
+  </a>
 </div>
 
 <script>
