Add settings link to bottom bar in index.html
Added a link to settings.html in the bottom bar.

--- a/index.html
+++ b/index.html
@@ -54,11 +54,15 @@
   <a href="index.html">
     <img src="home.svg" />
   </a>
+  <a href="settings.html">
+    <img src="setting.svg" />
+  </a>
 </div>
 
 
 </body>
 </html>
+
 
 
 
