Add settings link to bottom navigation bar
Added a settings link to the bottom bar.

--- a/iframe.html
+++ b/iframe.html
@@ -91,6 +91,9 @@
   <a href="index.html">
     <img src="home.svg" alt="Home" />
   </a>
+  <a href="settings.html">
+    <img src="setting.svg" />
+  </a>
 </div>
 
 <script>
@@ -130,3 +133,4 @@
 
 </body>
 </html>
+
