Add Eaglercraft game link to g.html

--- a/g.html
+++ b/g.html
@@ -132,7 +132,11 @@
     <img src="games/undertale.png" alt="Undertale">
     <div class="game-title">Undertale</div>
   </a>
-</div>
+
+<a href="iframe.html?game=game4" class="game-square">
+  <img src="games/minecraft.png" alt='Eaglercraft">
+  <div class="game-title">Eaglercraft</div>
+</div>    
 
 
 <div class="bottom-bar">
