--- a/settings.html
+++ b/settings.html
@@ -1,1 +1,205 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Settings</title>
+  <link rel="stylesheet" href="style.css">
+
+  <style>
+    body {
+      margin: 0;
+      background: #000;
+      overflow: hidden;
+      font-family: 'Poppins', sans-serif;
+      position: relative;
+      color: white;
+    }
+
+    /* Falling shapes */
+    .shape {
+      position: fixed;
+      top: -100px;
+      width: 20px;
+      height: 20px;
+      background: rgba(255,255,255,0.2);
+      animation: fall linear infinite;
+      transform: rotate(45deg);
+      border-radius: 4px;
+      z-index: 0;
+    }
+
+    @keyframes fall {
+      to { transform: translateY(120vh) rotate(360deg); }
+    }
+
+    /* Settings container */
+    .settings-box {
+      width: 85%;
+      max-width: 700px;
+      margin: 15vh auto 0;
+      padding: 25px;
+      background: rgba(255,255,255,0.06);
+      border-radius: 20px;
+      backdrop-filter: blur(12px);
+      box-shadow: 0 0 15px rgba(255,255,255,0.05);
+      z-index: 10;
+      position: relative;
+      text-align: center;
+    }
+
+    .settings-box h1 {
+      margin-bottom: 25px;
+      font-weight: 600;
+    }
+
+    .setting-btn {
+      width: 100%;
+      padding: 16px;
+      margin: 10px 0;
+      background: rgba(255,255,255,0.12);
+      border: 2px solid rgba(255,255,255,0.2);
+      border-radius: 15px;
+      color: white;
+      font-size: 18px;
+      cursor: pointer;
+      transition: 0.25s;
+      backdrop-filter: blur(5px);
+    }
+
+    .setting-btn:hover {
+      background: rgba(255,255,255,0.2);
+      transform: scale(1.03);
+    }
+
+    /* Bottom bar */
+    .bottom-bar {
+      position: fixed;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: rgba(255,255,255,0.07);
+      padding: 12px 25px;
+      border-radius: 20px;
+      display: flex;
+      gap: 25px;
+      backdrop-filter: blur(10px);
+      z-index: 20;
+    }
+
+    .bottom-bar img {
+      width: 35px;
+      height: 35px;
+      filter: invert(1);
+      opacity: 0.9;
+      cursor: pointer;
+      transition: 0.25s;
+    }
+
+    .bottom-bar img:hover {
+      transform: scale(1.15);
+      opacity: 1;
+    }
+  </style>
+</head>
+<body>
+
+<!-- SETTINGS CARD -->
+<div class="settings-box">
+  <h1>Settings</h1>
+
+  <button class="setting-btn" onclick="cloak()">About:Blank Cloaker</button>
+  <button class="setting-btn" onclick="exportData()">Export Data</button>
+  <button class="setting-btn" onclick="importData()">Import Data</button>
+  <button class="setting-btn" onclick="customCloak()">Custom Cloak</button>
+</div>
+
+<!-- BOTTOM BAR -->
+<div class="bottom-bar">
+  <a href="g.html"><img src="https://www.svgrepo.com/show/326649/game-controller-outline.svg"></a>
+  <a href="apps.html"><img src="https://t3.ftcdn.net/jpg/15/88/15/36/360_F_1588153698_7iJuiX3nGooQmQf7piMer4Y7oUYJWrU4.webp"></a>
+  <a href="ideas.html"><img src="https://static.thenounproject.com/png/2162450-200.png"></a>
+  <a href="index.html"><img src="home.svg"></a>
+  <a href="settings.html"><img src="setting.svg"></a>
+</div>
+
+<script>
+/* Falling shapes */
+function spawnShape() {
+  const shape = document.createElement('div');
+  shape.className = 'shape';
+  const size = Math.random() * 25 + 10;
+  shape.style.width = size + 'px';
+  shape.style.height = size + 'px';
+  shape.style.left = Math.random() * 100 + 'vw';
+  shape.style.animationDuration = (Math.random() * 5 + 4) + 's';
+  document.body.appendChild(shape);
+  setTimeout(() => shape.remove(), 10000);
+}
+setInterval(spawnShape, 200);
+
+/* ABOUT:BLANK CLOAKER */
+function cloak() {
+  const win = window.open("about:blank", "_blank");
+  const iframe = win.document.createElement("iframe");
+  iframe.style.width = "100%";
+  iframe.style.height = "100%";
+  iframe.style.border = "none";
+  win.document.body.style.margin = "0";
+  win.document.body.appendChild(iframe);
+  iframe.src = window.location.href;
+}
+
+/* EXPORT DATA */
+function exportData() {
+  const data = localStorage;
+  const blob = new Blob([JSON.stringify(data)], { type: "application/json" });
+  const a = document.createElement("a");
+  a.href = URL.createObjectURL(blob);
+  a.download = "dxzvy-data.json";
+  a.click();
+}
+
+/* IMPORT DATA */
+function importData() {
+  const input = document.createElement("input");
+  input.type = "file";
+  input.accept = ".json";
+  input.onchange = event => {
+    const file = event.target.files[0];
+    const reader = new FileReader();
+    reader.onload = () => {
+      const imported = JSON.parse(reader.result);
+      for (let key in imported) {
+        localStorage.setItem(key, imported[key]);
+      }
+      alert("Data imported!");
+    };
+    reader.readAsText(file);
+  };
+  input.click();
+}
+
+/* CUSTOM TITLE + FAVICON */
+function customCloak() {
+  const title = prompt("Enter new tab title:");
+  const icon = prompt("Enter URL for favicon (.ico/.png):");
+
+  if (title) document.title = title;
+
+  if (icon) {
+    let link = document.querySelector("link[rel~='icon']");
+    if (!link) {
+      link = document.createElement("link");
+      link.rel = "icon";
+      document.head.appendChild(link);
+    }
+    link.href = icon;
+  }
+
+  alert("Custom cloak applied!");
+}
+</script>
+
+</body>
+</html>
