Refactor settings.html for improved layout and features

--- a/settings.html
+++ b/settings.html
@@ -10,13 +10,10 @@
     body {
       margin: 0;
       background: #000;
-      overflow: hidden;
       font-family: 'Poppins', sans-serif;
-      position: relative;
-      color: white;
+      overflow: hidden;
     }
 
-   
     .shape {
       position: fixed;
       top: -100px;
@@ -33,46 +30,42 @@
       to { transform: translateY(120vh) rotate(360deg); }
     }
 
-    
-    .settings-box {
-      width: 85%;
-      max-width: 700px;
-      margin: 15vh auto 0;
-      padding: 25px;
-      background: rgba(255,255,255,0.06);
-      border-radius: 20px;
-      backdrop-filter: blur(12px);
-      box-shadow: 0 0 15px rgba(255,255,255,0.05);
+    h1 {
+      text-align: center;
+      color: white;
+      margin-top: 30px;
       z-index: 10;
       position: relative;
-      text-align: center;
     }
 
-    .settings-box h1 {
-      margin-bottom: 25px;
-      font-weight: 600;
+    .settings-box {
+      max-width: 500px;
+      margin: 40px auto;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      z-index: 10;
+      position: relative;
     }
 
     .setting-btn {
-      width: 100%;
-      padding: 16px;
-      margin: 10px 0;
-      background: rgba(255,255,255,0.12);
+      background: rgba(255,255,255,0.1);
+      padding: 15px;
+      border-radius: 12px;
       border: 2px solid rgba(255,255,255,0.2);
-      border-radius: 15px;
       color: white;
-      font-size: 18px;
+      font-size: 1.1rem;
       cursor: pointer;
-      transition: 0.25s;
-      backdrop-filter: blur(5px);
+      transition: .25s;
+      text-align: center;
     }
 
     .setting-btn:hover {
       background: rgba(255,255,255,0.2);
-      transform: scale(1.03);
+      transform: scale(1.05);
+      border-color: rgba(255,255,255,0.6);
     }
 
-    
     .bottom-bar {
       position: fixed;
       bottom: 20px;
@@ -104,15 +97,23 @@
 </head>
 <body>
 
+<h1>Settings</h1>
 
 <div class="settings-box">
-  <h1>Settings</h1>
 
   <button class="setting-btn" onclick="cloak()">About:Blank Cloaker</button>
   <button class="setting-btn" onclick="exportData()">Export Data</button>
   <button class="setting-btn" onclick="importData()">Import Data</button>
-  <button class="setting-btn" onclick="customCloak()">Custom Cloak</button>
+  <button class="setting-btn" onclick="customCloak()">Custom Cloak (Title + Icon)</button>
+
+  <button class="setting-btn" onclick="uploadMusic()">Upload Background Music</button>
+  <button class="setting-btn" onclick="stopMusic()">Stop Music</button>
+
 </div>
+
+
+<audio id="bg-music" loop style="display:none;"></audio>
+
 
 
 <div class="bottom-bar">
@@ -126,37 +127,77 @@
 <script>
 
 function spawnShape() {
-  const shape = document.createElement('div');
-  shape.className = 'shape';
+  const shape = document.createElement("div");
+  shape.className = "shape";
   const size = Math.random() * 25 + 10;
-  shape.style.width = size + 'px';
-  shape.style.height = size + 'px';
-  shape.style.left = Math.random() * 100 + 'vw';
-  shape.style.animationDuration = (Math.random() * 5 + 4) + 's';
+  shape.style.width = size + "px";
+  shape.style.height = size + "px";
+  shape.style.left = Math.random() * 100 + "vw";
+  shape.style.animationDuration = (Math.random() * 5 + 4) + "s";
   document.body.appendChild(shape);
   setTimeout(() => shape.remove(), 10000);
 }
 setInterval(spawnShape, 200);
 
 
+
+window.addEventListener("load", () => {
+  const saved = localStorage.getItem("bg-music");
+  if (saved) {
+    const audio = document.getElementById("bg-music");
+    audio.src = saved;
+    audio.play().catch(() => {});
+  }
+});
+
+
+
+function uploadMusic() {
+  const input = document.createElement("input");
+  input.type = "file";
+  input.accept = "audio/*";
+
+  input.onchange = e => {
+    const file = e.target.files[0];
+    if (!file) return;
+
+    const reader = new FileReader();
+    reader.onload = () => {
+      localStorage.setItem("bg-music", reader.result);
+      const audio = document.getElementById("bg-music");
+      audio.src = reader.result;
+      audio.play();
+      alert("Background music updated!");
+    };
+
+    reader.readAsDataURL(file);
+  };
+
+  input.click();
+}
+
+function stopMusic() {
+  const audio = document.getElementById("bg-music");
+  audio.pause();
+  audio.currentTime = 0;
+}
+
+
+
 function cloak() {
   const win = window.open("about:blank", "_blank");
-  const iframe = win.document.createElement("iframe");
-  iframe.style.width = "100%";
-  iframe.style.height = "100%";
-  iframe.style.border = "none";
-  win.document.body.style.margin = "0";
-  win.document.body.appendChild(iframe);
-  iframe.src = window.location.href;
+  win.document.write(`<iframe src="${location.href}" style="width:100vw;height:100vh;border:none;"></iframe>`);
 }
 
 
 function exportData() {
-  const data = localStorage;
-  const blob = new Blob([JSON.stringify(data)], { type: "application/json" });
+  const data = JSON.stringify(localStorage);
+  const blob = new Blob([data], { type: "application/json" });
+  const url = URL.createObjectURL(blob);
+
   const a = document.createElement("a");
-  a.href = URL.createObjectURL(blob);
-  a.download = "dxzvy-data.json";
+  a.href = url;
+  a.download = "site-data.json";
   a.click();
 }
 
@@ -165,30 +206,46 @@ function importData() {
   const input = document.createElement("input");
   input.type = "file";
   input.accept = ".json";
-  input.onchange = event => {
-    const file = event.target.files[0];
+
+  input.onchange = e => {
+    const file = e.target.files[0];
+    if (!file) return;
+
     const reader = new FileReader();
     reader.onload = () => {
-      const imported = JSON.parse(reader.result);
-      for (let key in imported) {
-        localStorage.setItem(key, imported[key]);
+      const data = JSON.parse(reader.result);
+      for (let key in data) {
+        localStorage.setItem(key, data[key]);
       }
-      alert("Data imported!");
+      alert("Data imported! Reloading page...");
+      location.reload();
     };
+
     reader.readAsText(file);
   };
+
   input.click();
 }
 
 
 function customCloak() {
-  const title = prompt("Enter new tab title:");
-  const icon = prompt("Enter URL for favicon (.ico/.png):");
+  const title = prompt("Enter tab title:");
+  const iconURL = prompt("Enter favicon URL:");
+
+  if (title) localStorage.setItem("cloak-title", title);
+  if (iconURL) localStorage.setItem("cloak-icon", iconURL);
+
+  applyCloak();
+  alert("Cloak updated!");
+}
+
+function applyCloak() {
+  const title = localStorage.getItem("cloak-title");
+  const icon = localStorage.getItem("cloak-icon");
 
   if (title) document.title = title;
-
   if (icon) {
-    let link = document.querySelector("link[rel~='icon']");
+    let link = document.querySelector("link[rel='icon']");
     if (!link) {
       link = document.createElement("link");
       link.rel = "icon";
@@ -196,9 +253,9 @@ function customCloak() {
     }
     link.href = icon;
   }
-
-  alert("Custom cloak applied!");
 }
+
+applyCloak();
 </script>
 
 </body>
