Add 'Snow Rider' game link to g.html
Added a new game link for 'Snow Rider' in the launcher.

--- a/g.html
+++ b/g.html
@@ -176,10 +176,16 @@
     <img src="games/minecraft.png" alt="Eaglercraft">
     <div class="game-title">Eaglercraft</div>
   </div>
+
+
+
+<a href="iframe.html?game=game4" class="game-square">
+  <img src="games/snow-rider.png" alt="Snow Rider">
+  <div class="game-title">Snow Rider</div>
+ </a>
 </div>
 
-
-<!-- Version Launcher Popup -->
+  
 <div id="launcher">
   <div class="launcher-box">
     <h2>Select Version</h2>
