--- a/iframe.html
+++ b/iframe.html
@@ -114,7 +114,8 @@
   const gameMap = {
     game1: "games/people-playground/index.html",
     game2: "games/buckshot-roulette/index.html",
-    game3: "games/undertale/index.html"
+    game3: "games/undertale/index.html",
+    game4: "games/snow-rider/index.html",
   };
 
   const iframe = document.getElementById("gameFrame");
@@ -136,3 +137,4 @@
 
 </body>
 </html>
+
