--- a/g.html
+++ b/g.html
@@ -200,20 +200,20 @@
 
 
 <div class="bottom-bar">
-  <a href="g.html">
-    <img src="https://www.svgrepo.com/show/326649/game-controller-outline.svg" />
+  <a href="index.html">
+    <img src="icons/" />
   </a>
   <a href="apps.html">
-    <img src="https://t3.ftcdn.net/jpg/15/88/15/36/360_F_1588153698_7iJuiX3nGooQmQf7piMer4Y7oUYJWrU4.webp" />
+    <img src="icons/apps.svg" />
   </a>
   <a href="ideas.html">
     <img src="https://static.thenounproject.com/png/2162450-200.png" />
   </a>
   <a href="index.html">
-    <img src="home.svg" />
+    <img src="icons/home.svg" />
   </a>
   <a href="settings.html">
-    <img src="setting.svg" />
+    <img src="icons/setting.svg" />
   </a>
 </div>
 
