improved bottom bar and made games 4 per row

--- a/apps.html
+++ b/apps.html
@@ -1,1 +1,17 @@
-a
+<div class="bottom-bar">
+  <a href="index.html">
+    <img src="icons/home.svg" />
+  </a>
+  <a href="g.html">
+    <img src="icons/games.svg" />
+  </a>
+  <a href="apps.html">
+    <img src="icons/apps.svg" />
+  </a>
+  <a href="settings.html">
+    <img src="icons/setting.svg" />
+  </a>
+  <a href="ideas.html">
+    <img src="icons/ideas.svg" />
+  </a>
+</div>
