--- a/iframe.html
+++ b/iframe.html
@@ -75,20 +75,20 @@
 <iframe id="gameFrame" src=""></iframe>
 
 <div class="bottom-bar">
+  <a href="index.html">
+    <img src="icons/home.svg" />
+  </a>
   <a href="g.html">
-    <img src="https://www.svgrepo.com/show/326649/game-controller-outline.svg" alt="Games" />
+    <img src="icons/games.svg" />
   </a>
   <a href="apps.html">
-    <img src="https://t3.ftcdn.net/jpg/15/88/15/36/360_F_1588153698_7iJuiX3nGooQmQf7piMer4Y7oUYJWrU4.webp" alt="Apps" />
-  </a>
-  <a href="ideas.html">
-    <img src="https://static.thenounproject.com/png/2162450-200.png" alt="Ideas" />
-  </a>
-  <a href="index.html">
-    <img src="home.svg" alt="Home" />
+    <img src="icons/apps.svg" />
   </a>
   <a href="settings.html">
-    <img src="setting.svg" />
+    <img src="icons/setting.svg" />
+  </a>
+  <a href="ideas.html">
+    <img src="icons/ideas.svg" />
   </a>
 </div>
 
